Fix Fast API to take in variables in Body

--- a/three-maze/index.html
+++ b/three-maze/index.html
@@ -36,7 +36,7 @@
       type="text/javascript"
       src="static/assets/js/libs/tween.min.js"
     ></script>
-    <script type="text/javascript" src="static/assets/js/threemaze.js"></script>
+    <script type="module" src="static/assets/js/threemaze.js"></script>
     <script
       type="text/javascript"
       src="static/assets/js/threemaze.generate.js"
@@ -69,6 +69,7 @@
         matchBrackets: true,
         autoCloseBrackets: true,
       });
+
 
       var primrose = document.querySelector("primrose");
       var primroseVisible = false;
