First Sucessful path_taken Simulation

--- a/three-maze/index.html
+++ b/three-maze/index.html
@@ -91,5 +91,13 @@
       toggleEditorButton.addEventListener("click", togglePrimrose);
       
     </script>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <div id="modalText"></div>
+        <span class="close">&times;</span>
+        <h2>Your Modal Title</h2>
+        <p>Your modal content goes here.</p>
+      </div>
+    </div>
   </body>
 </html>
