--- a/three-maze/index.html
+++ b/three-maze/index.html
@@ -27,7 +27,7 @@
       </div>
       <primrose style="display:none"></primrose>
   </div>
-    
+
     <script
       type="text/javascript"
       src="static/assets/js/libs/three.min.js"
@@ -92,12 +92,10 @@
       
     </script>
     <div id="myModal" class="modal">
-      <div class="modal-content">
-        <div id="modalText"></div>
-        <span class="close">&times;</span>
-        <h2>Your Modal Title</h2>
-        <p>Your modal content goes here.</p>
-      </div>
+          <button class="close">
+              Close
+          </button>
+      <div id="modalText" class="modal-content"></div>
     </div>
   </body>
 </html>
