Fix Loading Animation and Lack of Feedback

--- a/three-maze/index.html
+++ b/three-maze/index.html
@@ -16,6 +16,9 @@
     />
   </head>
   <body>
+    <div id="loading-overlay" class="loading-overlay" style="display: none;">
+      <div class="loader"></div>
+    </div>
     <div class="three">
       <div class="button-wrapper">
           <button class="generate">
